layout issues
fixint layou issues

--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,11 @@ body {
   font-family: Poppins, sans-serif;
   padding-bottom: 0px;
   margin-bottom: 0px;
-  height: auto;
+  min-height: 100vh;
+}
+
+html {
+  height: 100vh;
 }
 
 #myModal {
@@ -172,6 +176,12 @@ body {
   filter: drop-shadow(0 10px 20px rgb(170, 170, 170));
 }
 
+.scroll-down {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 .contact {
   display: none;
 }
@@ -277,7 +287,8 @@ body {
   border: none;
   color: #333645;
   padding-top: 0px;
-  padding-bottom: 20px;
+  position: relative;
+  top: -25px;
 }
 
 .nav-item {
@@ -309,6 +320,7 @@ body {
   place-items: center;
   width: 100vw;
   height: 700px;
+  padding: 0.1px;
 }
 
 .main-blocks {
@@ -318,6 +330,7 @@ body {
 
 .page-image {
   height: 80vh;
+  padding: 0.1px;
 }
 
 .overlay-block {
@@ -329,7 +342,7 @@ body {
   z-index: 3;
   opacity: 5%;
   background: linear-gradient(270deg, transparent 25%, #000);
-  height: 62.5%;
+  height: 560px;
 }
 
 #netmatters-work {
@@ -563,6 +576,7 @@ body {
 .main-carousel {
   width: 100vw;
   height: 400px;
+  padding: 0.1px;
   align-items: center;
   justify-content: center;
   position: relative;
@@ -571,19 +585,6 @@ body {
   top: -145px;
   background-size: cover;
   background-repeat: no-repeat;
-}
-
-html, body {
-  width: 100%;
-  margin: 0px;
-  padding: 0px;
-  overflow-x: hidden;
-}
-
-html, footer {
-  width: 100%;
-  margin: 0px;
-  padding: 0px;
 }
 
 .caption-text {
@@ -1437,6 +1438,12 @@ h4 {
   height: 203px;
 }
 
+.card-3 {
+  position: relative;
+  padding-top: 0.1px;
+  top: -220px;
+}
+
 .card-1, .card-2, .card-3 {
   margin: 20px;
   display: grid;
@@ -1916,9 +1923,26 @@ footer h4:hover {
 
 /*Media Queries*/
 @media screen and (min-width: 576px) {
+  .main-blocks {
+    margin-right: 35px;
+  }
+  .main-blocks-2 {
+    margin-right: 35px;
+  }
+  .hamburger-menu {
+    right: 25px;
+    top: 38px;
+  }
+  .phone {
+    margin-top: -10px;
+    margin-left: -25px;
+    right: 5px;
+  }
   .search-bar {
     position: relative;
-    right: 450px;
+    padding-right: 180px;
+    right: 510px;
+    margin-top: -3px;
   }
   .glass {
     display: none;
