--- a/partials/_base-style.scss
+++ b/partials/_base-style.scss
@@ -1,14 +1,21 @@
 //*--Base Element Styles--*/
 
 *
-{box-sizing: border-box;}
+{box-sizing: border-box;
+
+}
 
 body {
   font-family:$main-page-font-family;
   padding-bottom:0px;
   margin-bottom:0px;
-  height:auto;
+  min-height:100vh;
 
+}
+
+html
+{
+  height:100vh;
 }
 
 //modal styles
@@ -215,6 +222,13 @@ max-width: auto;
   filter: drop-shadow(0 10px 20px rgb(170,170,170))
 }
 
+.scroll-down
+{
+  height:100%;
+  margin:0;
+  padding:0;
+}
+
 .contact
 {
   display:none
@@ -361,12 +375,14 @@ background-color: #333645;
   
  }
 
+
  .phone 
  {background-color: transparent;
   border: none;
   color:  #333645;
   padding-top:0px;
-  padding-bottom:20px;
+  position:relative;
+  top:-25px;
 
  
   
@@ -421,6 +437,7 @@ height:100%;
   place-items: center;
   width: 100vw;
   height: 700px;
+  padding:0.1px;
 }
 
 .main-blocks
@@ -432,6 +449,7 @@ height:100%;
 .page-image
 {
 height:80vh;
+padding:0.1px;
 
 
 
@@ -448,7 +466,7 @@ height:80vh;
   opacity:5%;
   background:linear-gradient(270deg, transparent 25%, #000);
 
-  height:62.5%;
+  height:560px;
 }
 
 #netmatters-work
@@ -741,6 +759,7 @@ height:80vh;
   
     width : 100vw;
     height: 400px;
+    padding:0.1px;
   align-items:center;
   justify-content: center;
   position:relative;
@@ -756,22 +775,7 @@ height:80vh;
 
 
 
-html,body
-{
-    width: 100%;
-    
-    margin: 0px;
-    padding: 0px;
-    overflow-x: hidden; 
-}
 
-html,footer
-{
-    width: 100%;
-  
-    margin: 0px;
-    padding: 0px;
-}
 
  .caption-text
 { display: block;
@@ -1562,7 +1566,12 @@ h4 {
   height:203px;
 }
 
-
+.card-3
+{
+  position:relative;
+  padding-top:0.1px;
+  top:-220px;
+}
 
 .card-1, .card-2, .card-3 {
   
